<resources>
    <string name="app_name">DeviceTracker</string>
    <string name="no_internet">No Internet</string>
    <string name="no_devices_found">No devices found.</string>
    <string name="title">Title:</string>
    <string name="type">Type:</string>
    <string name="description">Description:</string>
    <string name="price">Price:</string>
    <string name="rating">Rating:</string>
    <string name="search">Search</string>
    <string name="no_internet_message">There is no alerts available for this time period.</string>
    <string name="share">Share</string>
</resources>
